footer buttons alignment fixed.

--- a/src/app/pages/template/template-dialog/template-dialog.component.scss
+++ b/src/app/pages/template/template-dialog/template-dialog.component.scss
@@ -1,24 +1,24 @@
 
 .form-row {
     display: flex;
-    gap: 20px; 
+    gap: 20px;
     margin-bottom: 10px;
     width: 300px;
   }
-  
+
   .form-group {
     display: flex;
     flex-direction: column;
     flex: 1;
   }
-  
+
   label {
     font-weight: bold;
     margin-bottom: 5px;
     font-size: 14px;
     color: #333;
   }
-  
+
   .form-control,
   .custom-select-dropdown {
     font-size: 14px;
@@ -27,19 +27,19 @@
     transition: border 0.3s ease;
     max-width: 100% !important;
   }
-  
+
   .form-control:focus,
   .custom-select-dropdown:focus {
     border-color: #007bff;
     outline: none;
   }
-  
+
   .error-message {
     color: #ff4d4d;
     font-size: 12px;
     margin-top: 5px;
   }
-  
+
   .submit-button {
     background-color: #00A3AB;
     color: white;
@@ -63,13 +63,13 @@
     transition: background-color 0.3s ease;
     outline: none;
   }
-  
+
   .submit-button:disabled {
     background-color: #07f6ce;
     color: #000000;
     cursor: not-allowed;
   }
-  
+
   .submit-button:hover:not(:disabled) {
     background-color: #00A3AB;
     color: #ffffff;
@@ -88,7 +88,6 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 0;
-    padding: 0 10px;
+    //margin: 0;
+    padding: 0.5rem;
   }
-  
